# realworldhaskell

./: .gitignore  README.md
ch01/: ex01.txt  ex02.txt  ex03.hs  ex04.hs
ch02/: ex01.hs  ex01.txt  ex02.txt  ex03.hs  ex04.txt
ch03/: ex01.hs  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.hs  ex08.hs  ex09.hs  ex10.hs  ex11.hs  ex12.hs  ex13.hs  ex14.hs  ex15.hs  ex16.hs
ch04/: ex01.hs  ex02.hs  ex03.hs  ex04.hs  ex05.hs  ex06.hs  ex07.hs  ex08.hs  ex09.hs  ex10.hs  ex11.hs
ch05/: .gitignore  Main.hs  Prettify.hs  PrettyJSON.hs  Put.hs  PutJSON.hs  README.md  SimpleJSON.hs  mypretty.cabal
ch07/: actions.hs  actions2.hs  basicio-nodo.hs  basicio.hs  filter.hs  input.txt  toupper-lazy4.hs  toupper-lazy5.hs  toupper-lazy6.hs
ch08/: ElfMagic.hs  Glob.hs  GlobRegex.hs  HighestClose.hs  SumFile.hs  ex01.hs
ch08/ex01/: GlobRegex.hs  README.md
ch08/ex02/: README.md
ch08/ex03/: Glob.hs  GlobRegex.hs  README.md
ch08/ex04/: Glob.hs  README.md
ch08/ex05/: README.md
ch08/ex06/: README.md
ch08/ex07/: Glob.hs  GlobRegex.hs  README.md
ch08/ex08/: Glob.hs  README.md
ch09/: BetterPredicate.hs  ControlledVisit.hs  FoldDir.hs  RecursiveContents.hs  SimpleFinder.hs
ch09/ex01/: BetterPredicate.hs  README.md
ch09/ex02/: README.md
ch09/ex03/: README.md
ch09/ex04/: ControlledVisit.hs  README.md
ch09/ex05/: ControlledVisit.hs  Ex05.hs  README.md
ch09/ex06/: ControlledVisit.hs  FoldDir.hs  README.md
ch09/ex07/: FoldDir.hs  README.md
ch10/: PNM.hs  Parse.hs
ch11/: QC-basics.hs
