Name: mhypretty
Version: 0.1
Synopsis: My pretty printing library, with JSON support
Description: 
  A simple pretty-printing library that illustrates how to 
  develop a Haskell library.
Author: Real World Haskell
Maintainer: nobody@realworldhaskell.org
Cabal-Version: >= 2.0
library:
  Exposed-Modules:
    Prettyfy
    PrettyJSON
    SimpleJSON
  Build-Depends: base >= 2.0